# green-utils

./: CMakeLists.txt  README.md
.github/: codecov.yml
.github/workflows/: test.yaml
src/: CMakeLists.txt  mpi_utils.cpp
src/green/utils/: except.h  mpi_shared.h  mpi_utils.h  timing.h
test/: CMakeLists.txt  main_test.cpp  mpi_utils_test.cpp  nompi_utils_test.cpp  utils_test.cpp
